--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -20,11 +20,12 @@
     <div class="colophon">
       <nav class="nav-colophon" aria-label="${_('About')}">
         <ol>
-            % for item_num, link in enumerate(footer['navigation_links'], start=1):
-            <li class="nav-colophon-0${item_num}">
-              <a id="${link['name']}" href="${link['url']}">${link['title']}</a>
+            <li class="nav-colophon-01">
+               <a id="about" href="/about">About</a>
             </li>
-            % endfor
+            <li class="nav-colophon-03">
+               <a id="contact" href="/contact">Contact</a>
+            </li>
         </ol>
       </nav>
 
@@ -38,7 +39,7 @@
             ## can be included in the footer on other sites
             ## (e.g. a blog or marketing front-end) to provide a consistent
             ## user experience.  See the branding app for details.
-            <img alt="organization logo" src="${footer['logo_image']}">
+            <!-- <img alt="organization logo" src="${footer['logo_image']}"> -->
           </a>
         </p>
       </div>
@@ -48,11 +49,15 @@
 
       <nav class="nav-legal" aria-label="${_('Legal')}">
         <ul>
-          % for item_num, link in enumerate(footer['legal_links'], start=1):
-            <li class="nav-legal-0${item_num}">
-              <a href="${link['url']}">${link['title']}</a>
+            <li class="nav-legal-01">
+               <a href="/privacy">Privacy Policy</a>
             </li>
-          % endfor
+            <li class="nav-legal-02">
+               <a href="/tos">Terms of Service</a>
+            </li>
+            <li class="nav-legal-03">
+               <a href="/honor">- Honor Code</a>
+            </li>
         </ul>
       </nav>
     </div>
